# keith_console

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  vcpkg.json
config/: default.toml
qml/: CMakeLists.txt  Main.qml
src/: CMakeLists.txt
src/terminal/: CMakeLists.txt  config_loader.cc  config_loader.h  logger.cc  logger.h  screen_buffer.cc  screen_buffer.h  terminal_bridge.cc  terminal_bridge.h  terminal_session.cc  terminal_session.h  vt_parser.cc  vt_parser.h
src/ui/: CMakeLists.txt  application.cc  application.h  plain_text_surface.cc  plain_text_surface.h
